--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "stripe": "^14.23.0"
   }
 }
