--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Micro project that avails various food plans from restaurants and accepts payment",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "both": "concurrently \"node app.js\" \"cd Frontend && npm run start\""
   },
   "repository": {
     "type": "git",
@@ -15,6 +16,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
